2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that causes segmentation fault if
	req->getCurrentUrl() contains printf formatting characters such as
	%d. The statement that causes this bug is useless and removed.
	* src/AbstractCommand.cc

2009-10-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	* Release 1.6.1

2009-10-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Simplified Chinese translation. Thanks to translators.
	* po/zh_CN.po

2009-10-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated translation template
	* po

2009-10-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.6.1
	* configure.ac

2009-10-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed interval from 120 to 60 for dropping inactive peer.
	* src/DefaultBtInteractive.cc

2009-10-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated man page for --user-agent and --peer-id-prefix option.
	* doc/aria2c.1.txt

2009-10-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Code clean up
	* src/BtPostDownloadHandler.cc
	* src/ContentTypeRequestGroupCriteria.cc
	* src/ContentTypeRequestGroupCriteria.h
	* src/DownloadHandlerConstants.cc
	* src/DownloadHandlerConstants.h
	* src/DownloadHandlerFactory.cc
	* src/MetalinkPostDownloadHandler.cc

2009-10-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't save control file when aria2 exists while checking piece
	hash(behavior of -V option). If control file doesn't exist when
	aria2 launched, the completed length in saved control file will be
	0 byte and this confuses user. disableSaveControlFile() is called
	in RequestGroup::processCheckIntegrityEntry().
	enableSaveControlFile() will be called after hash checking is
	done. See CheckIntegrityCommand.
	* src/CheckIntegrityCommand.cc
	* src/RequestGroup.cc
	* src/RequestGroup.h
	* src/RequestGroupMan.cc
